[gd_scene load_steps=5 format=3 uid="uid://dnsl2jafu5fdf"]

[ext_resource type="Script" path="res://Scripts/enemy_script.gd" id="1_em4cs"]
[ext_resource type="Texture2D" uid="uid://doupivtd08017" path="res://icon.svg" id="1_l5l7l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bg52y"]
size = Vector2(21.7888, 20.3258)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ad4ln"]
size = Vector2(20, 19.3984)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_em4cs")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
texture = ExtResource("1_l5l7l")

[node name="FloorCast" type="RayCast2D" parent="."]
position = Vector2(62, 0)
target_position = Vector2(0, 80.95)

[node name="WallCast" type="RayCast2D" parent="."]
position = Vector2(62, 0)
target_position = Vector2(15, 0)

[node name="KillBox" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KillBox"]
position = Vector2(0.499999, 0.880459)
scale = Vector2(6.10406, 6.38406)
shape = SubResource("RectangleShape2D_bg52y")
debug_color = Color(0.98, 0, 0, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.9203)
scale = Vector2(6.10406, 6.38406)
shape = SubResource("RectangleShape2D_ad4ln")

[connection signal="body_entered" from="KillBox" to="." method="_on_kill_box_body_entered"]
